# giaic-hackathon-2

phase-1/: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
phase-1/.claude/: settings.local.json
phase-1/.claude/skills/cli-app/: SKILL.md
phase-1/.claude/skills/python-clean-code/: SKILL.md
phase-1/.specify/memory/: constitution.md
phase-1/history/prompts/cli-todo-app/: 2-create-cli-todo-spec.spec.prompt.md  3-create-cli-todo-plan.plan.prompt.md  4-create-cli-todo-tasks.tasks.prompt.md
phase-1/history/prompts/constitution/: 1-create-python-cli-constitution.constitution.prompt.md
phase-1/specs/001-cli-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-1/specs/001-cli-todo-app/checklists/: requirements.md
phase-1/specs/001-cli-todo-app/contracts/: task-api.md
phase-1/src/: __init__.py  cli.py  main.py  models.py  store.py  ui_components.py  utils.py
phase-1/tests/: __init__.py  test_models.py  test_store.py
phase-2/: AUTHENTICATION_SYSTEM_SUMMARY.md  BACKEND_FOUNDATION_SUMMARY.md  CLAUDE.md  FRONTEND_SUMMARY.md  SECURE_API_SUMMARY.md  UI_IMPLEMENTATION_SUMMARY.md  debug_db.py  docker-compose.yml  inspect_db.py  truncate_jwks.py
phase-2/.claude/: settings.local.json
phase-2/backend/: .dockerignore  Dockerfile  auth.py  crud.py  database.py  main.py  models.py  requirements.txt
phase-2/frontend/: middleware.ts  package.json  pnpm-lock.yaml  proxy.ts  tsc_output.txt  tsc_output_4.txt  tsc_output_5.txt
phase-3/: .gitignore
phase-3/backend/: agent_simple.py  context.py  crud.py  main.py  (+5 more)
(+95 files in other folders)
